3.Kubernetes/2.Workloads/1.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-alpine
spec:
  containers:
  - name: nginx-alpine
    image: nginx-alpine
    ports:
    - containerPort: 80
