3.Kubernetes/2.Workloads/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx-alpine-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
